tmp-api-stderr.log
node:events:487
      throw er; // Unhandled 'error' event
      ^

Error: listen EADDRINUSE: address already in use :::4000
    at Server.setupListenHandle [as _listen2] (node:net:2008:16)
    at listenInCluster (node:net:2065:12)
    at Server.listen (node:net:2170:7)
    at app.listen (C:\Users\SYed Mohd Hatta\whatsapp-crm-v2\node_modules\express\lib\application.js:635:24)
    at bootstrap (C:\Users\SYed Mohd Hatta\whatsapp-crm-v2\apps\api\src\server.ts:56:7)
    at process.processTicksAndRejections (node:internal/process/task_queues:104:5)
Emitted 'error' event on Server instance at:
    at emitErrorNT (node:net:2044:8)
    at process.processTicksAndRejections (node:internal/process/task_queues:90:21) {
  code: 'EADDRINUSE',
  errno: -4091,
  syscall: 'listen',
  address: '::',
  port: 4000
}

Node.js v24.16.0
node:events:487
      throw er; // Unhandled 'error' event
      ^

Error: listen EADDRINUSE: address already in use :::4000
    at Server.setupListenHandle [as _listen2] (node:net:2008:16)
    at listenInCluster (node:net:2065:12)
    at Server.listen (node:net:2170:7)
    at app.listen (C:\Users\SYed Mohd Hatta\whatsapp-crm-v2\node_modules\express\lib\application.js:635:24)
    at bootstrap (C:\Users\SYed Mohd Hatta\whatsapp-crm-v2\apps\api\src\server.ts:56:7)
    at process.processTicksAndRejections (node:internal/process/task_queues:104:5)
Emitted 'error' event on Server instance at:
    at emitErrorNT (node:net:2044:8)
    at process.processTicksAndRejections (node:internal/process/task_queues:90:21) {
  code: 'EADDRINUSE',
  errno: -4091,
  syscall: 'listen',
  address: '::',
  port: 4000
}

Node.js v24.16.0
node:events:487
      throw er; // Unhandled 'error' event
      ^

Error: listen EADDRINUSE: address already in use :::4000
    at Server.setupListenHandle [as _listen2] (node:net:2008:16)
    at listenInCluster (node:net:2065:12)
    at Server.listen (node:net:2170:7)
    at app.listen (C:\Users\SYed Mohd Hatta\whatsapp-crm-v2\node_modules\express\lib\application.js:635:24)
    at bootstrap (C:\Users\SYed Mohd Hatta\whatsapp-crm-v2\apps\api\src\server.ts:56:7)
    at process.processTicksAndRejections (node:internal/process/task_queues:104:5)
Emitted 'error' event on Server instance at:
    at emitErrorNT (node:net:2044:8)
    at process.processTicksAndRejections (node:internal/process/task_queues:90:21) {
  code: 'EADDRINUSE',
  errno: -4091,
  syscall: 'listen',
  address: '::',
  port: 4000
}

Node.js v24.16.0
C:\Users\SYed Mohd Hatta\whatsapp-crm-v2\apps\api\src\modules\admin\admin.routes.ts:5
  getRolePermissions,
  ^
SyntaxError: The requested module '../../controllers/adminBackfillController.js' does not provide an export named 'getRolePermissions'
    at #asyncInstantiate (node:internal/modules/esm/module_job:327:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:431:5)
    at async node:internal/modules/esm/loader:633:26
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.16.0
(node:3904) DeprecationWarning: Calling client.query() when the client is already executing a query is deprecated and will be removed in pg@9.0. Use async/await or an external async flow control mechanism instead.
(Use `node --trace-deprecation ...` to show where the warning was created)
(node:5736) DeprecationWarning: Calling client.query() when the client is already executing a query is deprecated and will be removed in pg@9.0. Use async/await or an external async flow control mechanism instead.
(Use `node --trace-deprecation ...` to show where the warning was created)
